--- a/src/css/style.css
+++ b/src/css/style.css
@@ -159,6 +159,18 @@ margin-top: 30px;
 width: 100%;
 overflow: auto;
 }
+@media (max-width: 515px) {
+    .containerListaProdutos ul {
+        
+        list-style: none;
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: space-around;
+        margin-top: 30px;
+        width: 100%;
+        overflow: auto;
+        }
+    }
 
 .containerListaProdutos ul li {
 border-radius: 8px;
